--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>snkrGllry - Home</title>
+    <title>snkrGllry asd</title>
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
 
