--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -38,7 +38,66 @@
                     <li><a href="contest.html">Contest</a></li>
                     <li><a href="news.html">News</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li>
+                        <a href="#" data-toggle="modal" data-target="#loginModal">Login</a>
+
+                        <!-- Modal -->
+                        <div id="loginModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog modal-lg modal-sm">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Upload</h4>
+                                    </div>
+
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="loginUsername">Username</label>
+                                                <input type="text" class="form-control" id="loginUsername"
+                                                       placeholder="Enter Username">
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="loginPassword">Password</label>
+                                                <input type="password" class="form-control" id="loginPassword"
+                                                       placeholder="Password">
+                                            </div>
+                                            <a href="index.html" class="btn btn-primary" role="button">Login</a>
+                                            <div class="form-group">
+                                                <label for="registerUsername">Username</label>
+                                                <input type="text" class="form-control" id="registerUsername"
+                                                       placeholder="Enter Username">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="registerEmail">Email address</label>
+                                                <input type="email" class="form-control" id="registerEmail"
+                                                       placeholder="Enter email">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="registerPassword">Password</label>
+                                                <input type="password" class="form-control" id="registerPassword"
+                                                       placeholder="Password">
+                                            </div>
+
+                                            <a href="index.html" class="btn btn-primary" role="button">Register</a>
+                                        </form>
+
+
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                                        </button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </li>
                     <li><a href="profile.html">Profile</a></li>
                 </ul>
             </div>
@@ -56,7 +115,7 @@
             <div class="col-xs-12 thumb">
                 <h2>Colorful like a rainbow</h2>
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5087.JPG" width="569" height="379" >
+                    <img class="img-responsive" src="../img/IMG_5087.JPG" width="569" height="379">
                     <figcaption>Adidas Multicolor 2.0</figcaption>
                 </figure>
                 <article>
@@ -77,7 +136,6 @@
             </div>
         </div>
     </div>
-
 
 
 </section>
@@ -176,8 +234,16 @@
 
 
 <footer>
-    <a href="contact.html">Contact</a>
-    <a href="impressum.html">Impressum</a>
+
+    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
+
+            </ul>
+        </div>
+    </div>
 </footer>
 
 
