--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>snkrGllry - HoHJKHJKme</title>
+    <title>snkrGllry - Home</title>
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
 
@@ -67,7 +67,7 @@
 
 <section>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -80,16 +80,16 @@
                 <!-- Wrapper for carousel items -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5059.jpg" alt="sneaker" width="400"
+                        <img class="img-fluid img-responsive" src="../img/IMG_5059.jpg" alt="sneaker" width="800"
                              height="345">
                     </div>
                     <div class="item">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5087.jpg" alt="sneaker" width="400"
+                        <img class="img-fluid img-responsive" src="../img/IMG_5087.jpg" alt="sneaker" width="800"
                              height="345">
                     </div>
                     <div class="item">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5109.jpg" alt="sneaker" width="400"
-                             height="345">
+                        <img class="img-fluid img-responsive" src="../img/IMG_5109.jpg" alt="sneaker" width="800"
+                             height="">
                     </div>
                 </div>
                 <!-- Carousel controls -->
@@ -121,12 +121,12 @@
             <div class="collapse navbar-collapse" id="filterNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><!-- Trigger the modal with a button -->
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-                            Open Modal
-                        </button>
+
+
+                        <a href="#" data-toggle="modal" data-target="#uploadModal">Upload</a>
 
                         <!-- Modal -->
-                        <div id="myModal" class="modal fade" role="dialog">
+                        <div id="uploadModal" class="modal fade" role="dialog">
                             <div class="modal-dialog modal-lg modal-sm">
 
                                 <!-- Modal content-->
@@ -135,15 +135,88 @@
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         <h4 class="modal-title">Upload</h4>
                                     </div>
+
                                     <div class="modal-body">
-                                        <p>Hier kommt ein Form muss sich bei ESC schliessen</p>
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="brandSelect">Brand</label>
+                                                <select class="form-control" id="brandSelect">
+                                                    <option>Nike</option>
+                                                    <option>Adidas</option>
+                                                    <option>Puma</option>
+                                                    <option>Asics</option>
+                                                    <option>Reebok</option>
+                                                    <option>Saucony</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="colorSelect">Color</label>
+                                                <select class="form-control" id="colorSelect">
+                                                    <option>Black</option>
+                                                    <option>White</option>
+                                                    <option>Red</option>
+                                                    <option>Yellow</option>
+                                                    <option>Orange</option>
+                                                    <option>Brown</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="styleSelect">Style</label>
+                                                <select class="form-control" id="styleSelect">
+                                                    <option>Running</option>
+                                                    <option>Basketball</option>
+                                                    <option>Tennis</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="materialSelect">Style</label>
+                                                <select class="form-control" id="materialSelect">
+                                                    <option>Running</option>
+                                                    <option>Basketball</option>
+                                                    <option>Tennis</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="shapeSelect">Style</label>
+                                                <select class="form-control" id="shapeSelect">
+                                                    <option>this</option>
+                                                    <option>that</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="yearSelect">Style</label>
+                                                <select class="form-control" id="yearSelect">
+                                                    <option>2016</option>
+                                                    <option>2015</option>
+                                                    <option>2014</option>
+                                                    <option>and so on</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="descriptionTextarea">Description</label>
+                                                <textarea class="form-control" id="descriptionTextarea"
+                                                          rows="3"></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputFile">File input</label>
+                                                <input type="file" class="form-control-file" id="exampleInputFile">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                        </form>
+
+
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close
                                         </button>
                                     </div>
-                                </div>
 
+                                </div>
                             </div>
                         </div>
                     </li>
@@ -361,8 +434,21 @@
 
 
 <footer>
-    <a href="contact.html">Contact</a>
-    <a href="impressum.html">Impressum</a>
+
+
+    <!--navbar-fixed-bottom-->
+
+    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
+
+            </ul>
+        </div>
+    </div>
+
+
 </footer>
 
 
