--- a/HTML/login.html
+++ b/HTML/login.html
@@ -79,8 +79,16 @@
 
 
 <footer>
-    <a href="contact.html">Contact</a>
-    <a href="impressum.html">Impressum</a>
+
+    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
+
+            </ul>
+        </div>
+    </div>
 </footer>
 
 
