--- a/HTML/upload.html
+++ b/HTML/upload.html
@@ -148,11 +148,7 @@
             <label for="exampleTextarea">Example textarea</label>
             <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
         </div>
-        <div class="form-group">
-            <label for="exampleInputFile">File input</label>
-            <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-            <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
-        </div>
+
         <fieldset class="form-group">
             <legend>Radio buttons</legend>
             <div class="form-check">
@@ -187,8 +183,15 @@
 
 
 <footer>
-    <a href="contact.html">Contact</a>
-    <a href="impressum.html">Impressum</a>
+    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
+
+            </ul>
+        </div>
+    </div>
 </footer>
 
 
