--- a/HTML/about.html
+++ b/HTML/about.html
@@ -51,7 +51,7 @@
 
 <section>
     <section>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h2>About Us</h2>
