--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="iiiindex.html">Home</a></li>
                     <li><a href="contest.html">Contest</a></li>
                     <li><a href="news.html">News</a></li>
                     <li><a href="about.html">About</a></li>
