--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,8 @@
     <title>snkrGllry - Home</title>
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 
 </head>
@@ -42,7 +44,7 @@
                     <li><a href="contest.html">Contest</a></li>
                     <li><a href="news.html">News</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="profile.html">Profile</a></li>
                 </ul>
             </div>
