--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -17,6 +17,8 @@
     <title>snkrGllry - Home</title>
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 
 </head>
