--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,8 @@
 
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+
+        <div  class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -52,7 +53,9 @@
             </div>
         </div>
     </nav>
+    <div id="caption">
     <h1>snkrGllry</h1>
+    </div>
 </header>
 
 
