Deleted Toggle BUtton

--- a/HTML/news.html
+++ b/HTML/news.html
@@ -69,7 +69,7 @@
                 </figure>
                 <article>
                     <h3>Release Information</h3>
-                    <p id="coveRelease">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                         tempor
                         invidunt ut labore
                         et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
@@ -82,17 +82,10 @@
                         rebum. Stet
                         clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
-                    <button>Toggle Button</button>
+
                 </article>
             </div>
 
-            <script>
-                $(document).ready(function () {
-                    $("button").click(function () {
-                        $("#coveRelease").slideToggle();
-                    });
-                });
-            </script>
 
         </div>
 
