--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -52,9 +52,7 @@
     </div>
 </header>
 
-<section>
-
-
+<section class="contestBox">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-12">
@@ -62,12 +60,13 @@
 
                 <figure>
                     <img class="img-responsive center-block" src="../img/IMG_5087.JPG" width="569" height="379">
-                    <figcaption>Adidas Multicolor 2.0</figcaption>
+
                 </figure>
             </div>
 
             <div class="col-lg-6 col-md-6 col-xs-12">
                 <article>
+                    
                     <h3>Taste the rainbow</h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                         tempor
